--- a/README
+++ b/README
@@ -9,6 +9,4 @@ That is, from this directory do the following:
 
   3) sage -pkg conformal-1.0.spkg
 
-  4) Invoke the Fifth.
-
-  5) GOTO 4).
+  4) type something here
